overlays/kosarko-ns/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dspace-backend
spec:
  template:
    spec:
      containers:
        - name: dspace
          volumeMounts:
            - name: local-config
              mountPath: /dspace/config/submission-forms.xml
              subPath: submission-forms.xml
